--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,8 +16,8 @@ p {
     color: #757575;
 }
 
-.container-fluid {
-    padding: 70px 50px;;
+.padded {
+    padding: 70px 50px;
 }
 
 .text-justify {
