--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,25 +1,60 @@
-
-/*color palette*/
-.dark           { background: #7B1FA2; color: #FFFFFF; }
-.default        { background: #9C27B0; color: #FFFFFF; }
-.light          { background: #E1BEE7; color: #FFFFFF; }
-.main           { background: #FAFAFA; color: #212121; }
-.accent         { background: #FFC107; color: #FFFFFF; }
-.primary-text   { color: #212121; }
-.secondary-text { color: #757575; }
-.divider        { border-color: #BDBDBD; }
-
-body {
-    font-family: 'Raleway', 'Open Sans', 'Roboto', sans-serif;
-}
-p {
-    color: #757575;
+body, html {
+  height: 100%;
+  font: 400 15px/1.8 "Raleway", sans-serif;
+  color: #777;
 }
 
-.padded {
-    padding: 70px 50px;
+.bgimg-1, .bgimg-2, .bgimg-3 {
+  position: relative;
+  opacity: 0.65;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.bgimg-1 {
+  background-image: url("../img/img_parallax.jpg");
+  min-height: 100%;
 }
 
-.text-justify {
-    text-align: justify;
+.bgimg-2 {
+  background-image: url("../img/img_parallax2.jpg");
+  min-height: 400px;
+}
+
+.bgimg-3 {
+  background-image: url("../img/img_parallax3.jpg");
+  min-height: 400px;
+}
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px "Raleway", sans-serif;
+  color: #111;
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
 }
