--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,9 @@ body, html {
   color: #777;
 }
 
+.padded {
+  padding:50px 40px;
+}
 .bgimg-1, .bgimg-2, .bgimg-3 {
   position: relative;
   opacity: 0.65;
@@ -11,8 +14,8 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
+
 .bgimg-1 {
   background-image: url("../img/img_parallax.jpg");
   min-height: 100%;
@@ -20,29 +23,57 @@ body, html {
 
 .bgimg-2 {
   background-image: url("../img/img_parallax2.jpg");
-  min-height: 400px;
+  min-height: 100%;
 }
 
 .bgimg-3 {
   background-image: url("../img/img_parallax3.jpg");
-  min-height: 400px;
+  min-height: 100%;
+  color: #111;
 }
 
 .caption {
   position: absolute;
-  left: 0;
   top: 50%;
-  width: 100%;
+  left: 50%;
+  width: auto;
   text-align: center;
   color: #000;
+
 }
 
 .caption span.border {
-  background-color: #111;
-  color: #fff;
+  background-color:rgba(17, 17, 17, 0.4);
+  font-size:25px;
+  color: #f7f7f7;
   padding: 18px;
-  font-size: 25px;
   letter-spacing: 10px;
+}
+
+#top {
+  left: 0;
+  width: 100%;
+}
+
+#top span.border {
+  background-color: #111;
+  line-height: 60px;
+}
+
+.caption a:hover {
+  text-decoration: none;
+}
+
+.blur {
+  position: relative;
+  left: -50%;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  transition: all .3s ease-in-out;
+}
+.blur:hover {
+  -webkit-backdrop-filter: blur(7px);
+  backdrop-filter: blur(7px);
 }
 
 h3 {
@@ -52,9 +83,21 @@ h3 {
   color: #111;
 }
 
+.footer {
+  color:#ddd;
+  background-color:#282E34;
+  text-align:center;
+}
+
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
     .bgimg-1, .bgimg-2, .bgimg-3 {
         background-attachment: scroll;
+        min-height: 50%;
+        background-size: 200%;
+    }
+    .bgimg-1 {
+      background-size: cover;
+      min-height: 75%;
     }
 }
