added profile photo, updated footers, fixed responsiveness of header

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,7 +19,7 @@ body, html {
 }
 
 .bgimg-1 {
-  background-image: url("../img/img_parallax.jpg");
+  background-image: url("../img/profile_backgroundv2.png");
   min-height: 100%;
 }
 
@@ -118,13 +118,14 @@ h3 {
     .bgimg-1 {
       background-size: cover;
       min-height: 75%;
+      background-position: 20% 20%;
     }
 }
 
 @media only screen and (max-device-width: 720px) {
   .bgimg-1 {
     background-size: cover;
-    min-height: 60%;
+    min-height: 65%;
   }
 
 }
