--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -80,6 +80,7 @@ body, html {
 
 .caption span.border:hover {
   background-color:rgba(17, 17, 17, 0.7);
+  backdrop-filter: blur(4px);
 }
 
 .caption a:hover {
